platform/openshift/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: payment-processing
  labels:
    app.kubernetes.io/part-of: mayabank-payment-processing
