platform/openshift/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-processing-api
spec:
  selector:
    app: payment-processing-api
  ports:
    - {name: http, port: 8080, targetPort: 8080}
