platform/openshift/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: payment-processing-api
spec:
  to:
    kind: Service
    name: payment-processing-api
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
