platform/openshift/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: payment-processing-api-default
spec:
  podSelector:
    matchLabels:
      app: payment-processing-api
  policyTypes: [Ingress, Egress]
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - {protocol: TCP, port: 8080}
  egress:
    - {}
